# Customer-Management-Dashboard

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: cloud-read-model-v1.md  optimization-roadmap.md  update-release-flow.md  使用说明.md
scripts/: build-tauri-signed.ps1  create-update-manifest.ps1  publish-github-update.ps1  set-version.ps1  verify-update-release.ps1
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  updater-private.key.pub
src-tauri/icons/: icon.icns
src-tauri/src/: cloud.rs  commands.rs  db.rs  import_service.rs  lib.rs  main.rs  models.rs  service.rs
src-tauri/src/domain/: folder_names.rs  mod.rs  money.rs
src-tauri/tests/: domain_rules.rs  import_backup.rs  release_configuration.rs  repository_workflow.rs  spreadsheet_mapping.rs  windows_subsystem.rs
src/components/: CustomerDetailPanel.tsx  CustomerForm.test.tsx  CustomerForm.tsx  FileThumbnail.tsx  OrderDetailPanel.tsx  OrderDrawer.tsx  OrderForm.test.tsx  OrderForm.tsx  Sidebar.tsx  UpdateDialog.test.tsx  UpdateDialog.tsx  ui.tsx
src/lib/: api.ts  files.ts  format.test.ts  format.ts  import.test.ts  import.ts  orders.ts  printPresets.ts  types.ts  updater.ts
src/pages/: CustomersPage.test.tsx  CustomersPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  FactoriesPage.test.tsx  FactoriesPage.tsx  FilesPage.test.tsx  FilesPage.tsx  ImportExportPage.tsx  Onboarding.tsx  OrdersPage.test.tsx  OrdersPage.tsx  QuickRepliesPage.tsx  SettingsPage.tsx
