[package]
name = "startup-customer-workbench"
version = "0.1.19"
description = "创业客户管理工作台"
authors = ["Codex"]
edition = "2021"

[lib]
name = "startup_customer_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
calamine = "0.35"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
walkdir = "2"
zip = "2"
rfd = "0.15"

[dev-dependencies]
tempfile = "3"
